--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -64,16 +64,16 @@ involvement).  </p>
        </div>
 
 
-      <div id="qualifed-forms-starting-point" style="padding: 10px">
-         <p>Usage and Association (described above) are accompanied by six other qualifications of Starting Point relations. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+      <div id="qualified-forms-starting-point" style="padding: 10px">
+         <p>In addition to Usage and Association described above, six other <a href=#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
          </div>
       </div>
 
-      <div id="qualifed-forms-expanded" style="padding: 10px">
-         <p>Six relations from the Expanded category can also be qualified. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+      <div id="qualified-forms-expanded" style="padding: 1px">
+         <p>Six <a href=#description-expanded-terms">Expanded properties</a> can also be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
