--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -65,7 +65,7 @@ involvement).  </p>
 
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>In addition to Usage and Association described above, six other <a href=#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
+         <p>In addition to Usage and Association described above, six other <a href="#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
@@ -73,7 +73,7 @@ involvement).  </p>
       </div>
 
       <div id="qualified-forms-expanded" style="padding: 1px">
-         <p>Six <a href=#description-expanded-terms">Expanded relations</a> can also be qualified using the qualification properties, qualified influences, and influencer P0roperties shown in the following table.
+         <p>Six <a href="#description-expanded-terms">Expanded relations</a> can also be qualified using the qualification properties, qualified influences, and influencer P0roperties shown in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
