--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -14,7 +14,7 @@
       </div>
 
 
-	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses and subproperties.</p>
+	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses, subproperties, and a superproperty.</p>
 
      <p>Three subclasses of Agent are provided (<a href="#Person" class="qname">prov:Person</a>, <a href="#Organization" class="qname">prov:Organization</a>, and <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>), 
       while two subclasses of Entity are also provided: <a href="#Collection" class="qname">prov:Collection</a> is an Entity that provides a structure to some constituents (which are themselves Entities) and 
