save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -4,11 +4,11 @@
          Three classes provide a basis for the rest of PROV-O:  
        </p>
          <ul>
-            <li>An <a class="qname" href="#Entity">prov:Entity</a> is a thing one wants to provide provenance for. Things can be physical, digital, conceptual, or otherwise.
+            <li>An <a class="qname" href="#Entity">prov:Entity</a> is a physical, digital, conceptual, or other kind of thing with some fixed aspects; entities may be real or imaginary.  
             </li>
-            <li>An <a class="qname" href="#Activity">prov:Activity</a> is something that occurs over a period of time and acts upon or with entities; it may include consuming, processing, transforming, modifying, or relocating entities.
+            <li>An <a class="qname" href="#Activity">prov:Activity</a> is something that occurs over a period of time and acts upon or with entities; it may include consuming, processing, transforming, modifying, relocating, using, or generating entities.  
             </li>
-            <li>An <a class="qname" href="#Agent">prov:Agent</a> is something that bears some form of responsibility for an activity taking place or for the existence of an entity.
+            <li>An <a class="qname" href="#Agent">prov:Agent</a> is something that bears some form of responsibility for an activity taking place, for the existence of an entity, or for another agent's activity. 
             </li>
          </ul> 
       <p>The three primary classes relate to one another and to themselves using the properties shown in the following figure.</p>
