save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -17,8 +17,8 @@
       <a href='#startedAtTime' class="qname">prov:startedAtTime</a> and <a href='#endedAtTime' class="qname">prov:endedAtTime</a>, respectively), and they 
       <strong>use</strong> Entities during their lifespan and can also <strong>generate</strong> other Entities (described using 
       <a href='#used' class="qname">prov:used</a> and <a href='#wasGeneratedBy' class="qname">prov:wasGeneratedBy</a>, respectively). 
-      For example, a blog writing activity may use a particular dataset and generate a bar chart. Provenance chains of alternating Activities and 
-      Entities can be created with usage and generation.
+      For example, a blog writing activity may use a particular dataset and generate a bar chart. Usage and generation can be used to create provenance chains of 
+      alternating Activities and Entities.
       </p>
 
       <p>In addiition, we can say that an Activity <a href='#wasInformedBy' class="qname">prov:wasInformedBy</a>
