--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -15,7 +15,7 @@
 
       <p>Activities <strong>start</strong> and <strong>end</strong> at particular points in time (described using properties 
       <a href='#startedAtTime' class="qname">prov:startedAtTime</a> and <a href='#endedAtTime' class="qname">prov:endedAtTime</a>, respectively), and they 
-      <strong>use</strong> Entities during their lifespan and can also <strong>generate</strong> other Entities (described using 
+      <strong>use</strong> Entities during their lifespan and can <strong>generate</strong> other Entities (described using 
       <a href='#used' class="qname">prov:used</a> and <a href='#wasGeneratedBy' class="qname">prov:wasGeneratedBy</a>, respectively). 
       For example, a blog writing activity may use a particular dataset and generate a bar chart. Usage and generation can be used to create provenance chains of 
       alternating Activities and Entities.
@@ -27,9 +27,9 @@
       Activity, but the Entity is itself is not of interest. The <span class="repeated">prov:wasInformedBy</span> allows the assertion of provenance chains comprising only Activities.
       </p>
 
-      <p>
-         The provenance among Entities can also be expressed without mentioning the Activities involved, using the property <a href='#wasDerivedFrom' class="qname">prov:wasDerivedFrom</a>. A derivation is a transformation of an entity into another. 
-         Entities are described using any number of existing or newly-created RDF properties.
+      <p>To form provenance chains of only Entities, the <a href='#wasDerivedFrom' class="qname">prov:wasDerivedFrom</a> property. 
+         A derivation is a transformation of an entity into another. Arbitrary RDF properties can be used to describe the 
+         fixed aspects of an Entity that are interesting to a particular application.
       </p>
 
       <p>An Agent can be responsible for an Activity or an Entity (described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively). Agents can also be responsible for other Agents' actions. In this case, the Agent involved with an Activity or Entity <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> another Agent that may have been less involved, but still bears some responnsibility for the Activity or Entity.
