save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -21,7 +21,8 @@
       while two subclasses of Entity are also provided: <a href="#Collection" class="qname">prov:Collection</a> is an 
       Entity that provides a structure to some constituents (which are themselves Entities) and 
       <a href="#Bundle" class="qname">prov:Bundle</a> is a named set of provenance descriptions that enables the expression of provenance of provenance.
-      The <span class="repeated">prov:Collection</span> class can be used to express the provenance of the collection itself: e.g. who maintains the collection (attribution), 
+
+      The <span class="repeated">prov:Collection</span> class can be used to express the provenance of different kinds of collections (sets, lists, etc.) themselves: e.g. who maintains the collection (attribution), 
       which members it contains as it evolves, and how it was assembled. The <a href="#hadMember" class="qname">prov:hadMember</a> 
       property is used to assert membership in a collection.
       Note that a named set of provenance descriptions can take any form beyond PROV-O triples, including videotaped testimony or scribbles on a drink napkin. 
