--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -20,7 +20,7 @@
       <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>) and
       two subclasses of Entity are provided (<a href="#Collection" class="qname">prov:Collection</a>, and <a href="#Bundle" class="qname">prov:Bundle</a>). 
 
-      <span class="repeated">prov:Collection</a> is an Entity that provides a structure to some constituents (which are themselves Entities) and 
+      <span class="repeated">prov:Collection</span> is an Entity that provides a structure to some constituents (which are themselves Entities) and 
       <a href="#Bundle" class="qname">prov:Bundle</a> is a named set of provenance descriptions that enables the expression of provenance of provenance.
       The <span class="repeated">prov:Collection</span> class can be used to express the provenance of different kinds of collections (sets, lists, etc.) themselves: 
       e.g. who maintains the collection (attribution), which members it contains as it evolves, and how it was assembled. 
