save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -14,7 +14,7 @@
       </div>
 
 
-	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses, subproperties, and a superproperty.</p>
+	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses, subproperties, and one superproperty.</p>
 
      <p>Three subclasses of Agent (<a href="#Person" class="qname">prov:Person</a>, <a href="#Organization" class="qname">prov:Organization</a>, and 
       <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>) and
@@ -29,7 +29,7 @@
       </p>
 
       <p>
-      A <a href="#Bundle" class="qname">prov:Bundle</a> is a named set of provenance descriptions that enables the expression of provenance of provenance.
+      A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions that enables the expression of provenance of provenance.
       It is important to note that the set of provenance descriptions can assume forms beyond PROV-O triples, such as videotaped testimony or scribbles on a drink napkin. 
       The extension of Bundle that contains only PROV-O assertions is not named by PROV or PROV-O, since it is more appropriate to do so using other recommendations, 
       standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a distinct 
