save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -23,7 +23,7 @@
 
       <p>
       A <span class="repeated">prov:Collection</span> is an Entity that provides a structure (e.g. set, list, etc.) to some constituents (which are themselves Entities). 
-      The <span class="repeated">prov:Collection</span> class can be used to express the provenance of different kinds of collections themselves: 
+      The <span class="repeated">prov:Collection</span> class can be used to express the provenance of the collection itself: 
       e.g. who maintains the collection (attribution), which members it contains as it evolves, and how it was assembled. 
       The <a href="#hadMember" class="qname">prov:hadMember</a> property is used to assert membership in a collection.
       </p>
