--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -37,8 +37,11 @@
 		</p>
 
 	  <p>More general and more specific properties are also provided by the expanded terms. More generally, the property <a href="#wasInfluencedBy" class="qname">prov:wasInfluencedBy</a> is a superproperty that relates any influenced Entity, Activity, or Agent to any other influencing Entity, Activity, or Agent that had an effect on its characteristics. 
-        More specifically, three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are provided for certain kinds of derivation among Entities: <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> cites a potentially larger Entity (such as a Book, or Blog) from which an Entity was taken, <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> cites an older version of a revised Entity (such as first edition of a book), and <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an ancestor Entity produced by some agent with direct experience and knowledge about the topic. 
-
+        More specifically, three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are provided for certain kinds of derivation among Entities: 
+      <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> cites a potentially larger Entity (such as a Book, or Blog) from which an Entity was taken, 
+      <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> cites an older version of a revised Entity (such as a first edition of a book), and 
+      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an ancestor Entity produced by some agent with direct experience and 
+      knowledge about the topic (such as a read from a sensor, or a journal written during an historical event). 
       </p>
 	  
 	  <p>The <strong>second</strong> category relates Entities according to their levels of abstraction, where some Entities may present more aspects than their more general counterparts. 
