--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -41,7 +41,7 @@
       <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> cites a potentially larger Entity (such as a Book, or Blog) from which an Entity was taken, 
       <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> cites an older version of a revised Entity (such as a first edition of a book), and 
       <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an ancestor Entity produced by some agent with direct experience and 
-      knowledge about the topic (such as a read from a sensor, or a journal written during an historical event). 
+      knowledge about the topic (such as a reading from a sensor, or a journal written during an historical event). 
       </p>
 	  
 	  <p>The <strong>second</strong> category relates Entities according to their levels of abstraction, where some Entities may present more aspects than their more general counterparts. 
@@ -52,7 +52,11 @@
 
       <p>
       The <strong>third</strong> category allows further description of Entities. The property <a href="#value" class="qname">prov:value</a> holds a literal value for the Entity. For example, the <span class="repeated">prov:value</span> of a quote could be a string of the sentences stated, or the <span class="repeated">prov:value</span> of an Entity involved in a numeric calculation could be the xsd:integer four.
-		 The property <a href="#atLocation" class="qname">prov:atLocation</a> can be used to describe the <a href="#Location" class="qname">prov:Location</a> of any Entity, Activity, Agent, or <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a>. The properties used to describe instances of <span class="repeated">prov:Location</span> are outside the scope of PROV-O; reuse of other existing vocabulary is encouraged.
+		 The property <a href="#atLocation" class="qname">prov:atLocation</a> can be used to describe the <a href="#Location" class="qname">prov:Location</a> of any 
+      Entity, Activity, Agent, or <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a> 
+      (i.e., generation, usage, or invalidation of an entity and the starting or ending of an activities). 
+      The properties used to describe instances of <span class="repeated">prov:Location</span> are outside the scope of PROV-O; 
+      reuse of other existing vocabulary is encouraged.
 		</p>
 
  
