save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -3,13 +3,13 @@
        <h3>Qualified Terms</h3>
        <p>The classes and properties in the Qualified terms category are for
 users who wish to provide additional details about the relationships between
-entities, activities, and agents.  The terms in this category are the result of
+Entities, Activities, and Agents.  The terms in this category are the result of
 applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
 relations available in the <a
 href="#prov-starting-point-owl-terms-at-a-glance">Starting
 Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a>
 categories.  The Qualification Pattern consists of restating the unqualified
-relation by using an intermediate <em>involvement</em> class. In this
+relation by using an intermediate <a class="qname" href="#Influence">Influence</a> class. In this
 document, each property that can be qualified has a <em>can be qualified
 with</em> header linking to the qualifying property and involvement class.
 In the PROV-O OWL these are indicated using the annotation property <span
