--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,9 +1,8 @@
 <!-- incorporate https://dvcs.w3.org/hg/prov/rev/e3ecc51f4598 -->
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
-       <p>The classes and properties in the Qualified terms category are for
-users who wish to provide additional details about the relationships between
-Entities, Activities, and Agents.  The terms in this category are the result of
+       <p>The Qualified terms category is for users who wish to provide additional details about the relationships between
+         Entities, Activities, and Agents.  The terms in this category are the result of
 applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
 relations available in the <a
 href="#prov-starting-point-owl-terms-at-a-glance">Starting
