save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,7 +1,7 @@
 <!-- incorporate https://dvcs.w3.org/hg/prov/rev/e3ecc51f4598 -->
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
-       <p>The Qualified terms category is for users who wish to provide additional details about the relationships between
+       <p>The Qualified Terms category is for users who wish to provide further details about the influence among
          Entities, Activities, and Agents.  The terms in this category are the result of
 applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
 relations available in the <a
@@ -31,7 +31,7 @@ and
 the class <a class="qname" href='#Generation'>prov:Generation</a>, which is a subclass of <a class ="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>. From this, we can restate the above relation using the <em>qualification pattern</em> as:
 </p>
 <pre class="example">
-:e1    prov:wasGeneratedBy :e1Gen .
+:e1 prov:wasGeneratedBy :e1Gen .
 
 :e1Gen 
    a prov:Generation;
