save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,7 +8,7 @@ relations available in the <a
 href="#prov-starting-point-owl-terms-at-a-glance">Starting
 Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a>
 categories.  The Qualification Pattern consists of restating the unqualified
-relation by using an intermediate <a class="qname" href="#Influence">Influence</a> class. In this
+relation by using an intermediate class that represents the influence between two resources. In this
 document, each property that can be qualified has a <em>can be qualified
 with</em> header linking to the qualifying property and involvement class.
 In the PROV-O OWL these are indicated using the annotation property <span
