--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -3,23 +3,20 @@
        <h3>Qualified Terms</h3>
        <p>The Qualified Terms category is for users who wish to provide further details about the influence among
          Entities, Activities, and Agents.  The terms in this category are the result of
-applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
-relations available in the <a
-href="#prov-starting-point-owl-terms-at-a-glance">Starting
-Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a>
-categories.  The Qualification Pattern consists of restating the unqualified
-relation by using an intermediate class that represents the influence between two resources. In this
-document, each property that can be qualified has a <em>can be qualified
-with</em> header linking to the qualifying property and involvement class.
-In the PROV-O OWL these are indicated using the annotation property <span
-class="qname">prov:qualifiedForm</span>. The involvement class is a
-subclass of <a class="qname" href="#Influence">prov:Influence</a> which
-determines which property to link from the influence to the unqualified object,
-that is either
- <a class="qname" href="#entity">prov:entity</a>,
- <a class="qname" href="#activity">prov:activity</a>, or
- <a class="qname" href="#agent">prov:agent</a>
-<p>
+         applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
+         relations available in the <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and 
+         <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
+      The Qualification Pattern consists of restating the unqualified
+         relation by using an intermediate class that represents the influence between two resources. In this
+         document, each property that can be qualified has a <strong>can be qualified with</strong> 
+         header linking to the qualifying property and involvement class.
+      In the PROV-O OWL these are indicated using the annotation property <span class="qname">prov:qualifiedForm</span>. 
+         The involvement class is a subclass of <a class="qname" href="#Influence">prov:Influence</a> which
+      determines which property to link from the influence to the unqualified object, that is either
+    <a class="qname" href="#entity">prov:entity</a>,
+    <a class="qname" href="#activity">prov:activity</a>, or
+    <a class="qname" href="#agent">prov:agent</a>
+         <p>
 So for instance, if we have the unqualified statement:
 <pre class="example">
 :e1 prov:wasGeneratedBy :a1 .
