save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -7,8 +7,9 @@
          relations available in the <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and 
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
-         relation by using an intermediate class that represents the influence between two resources. In this
-         document, each property that can be qualified has a <strong>can be qualified with</strong> 
+         relation by using an intermediate class that represents the influence between two resources. 
+       In the <a href="#cross-reference">cross reference</a> in the next section of this document, 
+         each property that can be qualified provides a <strong>can be qualified with</strong> 
          header linking to the qualifying property and involvement class.
       In the PROV-O OWL these are indicated using the annotation property <span class="qname">prov:qualifiedForm</span>. 
          The involvement class is a subclass of <a class="qname" href="#Influence">prov:Influence</a> which
