save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,6 +8,7 @@
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
+      This new instance, in turn can be described with arbitrary descriptions about the influence between the two resources cited.
        In the <a href="#cross-reference">cross reference</a> in the next section of this document, 
          each property that can be qualified provides a <strong>can be qualified with</strong> 
          header linking to the qualifying property and involvement class.
