save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,7 +8,29 @@
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
-      This new instance, in turn can be described with arbitrary descriptions about the influence between the two resources cited.
+      This new instance, in turn, can be described with arbitrary descriptions about the influence between the two resources cited. The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify.
+      </p>
+
+
+
+      <div id="qualified-forms-starting-point" style="padding: 10px">
+         <p>In addition to Usage and Association described above, six other <a href="#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
+         </p>
+         <div style="text-align: center">
+            {% include "includes/qualifed-forms-starting-point.html" %}
+         </div>
+      </div>
+
+      <div id="qualified-forms-expanded" style="padding: 10px">
+         <p>Six <a href="#description-expanded-terms">Expanded relations</a> can also be qualified using the qualification properties, qualified influences, and influencer P0roperties shown in the following table.
+         </p>
+         <div style="text-align: center">
+            {% include "includes/qualifed-forms-expanded.html" %}
+         </div>
+      </div>
+
+
+      <p>
        In the <a href="#cross-reference">cross reference</a> in the next section of this document, 
          each property that can be qualified provides a <strong>can be qualified with</strong> 
          header linking to the qualifying property and involvement class.
@@ -60,23 +82,6 @@ involvement).  </p>
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
             <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>. </div>
        </div>
-
-
-      <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>In addition to Usage and Association described above, six other <a href="#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
-         </p>
-         <div style="text-align: center">
-            {% include "includes/qualifed-forms-starting-point.html" %}
-         </div>
-      </div>
-
-      <div id="qualified-forms-expanded" style="padding: 1px">
-         <p>Six <a href="#description-expanded-terms">Expanded relations</a> can also be qualified using the qualification properties, qualified influences, and influencer P0roperties shown in the following table.
-         </p>
-         <div style="text-align: center">
-            {% include "includes/qualifed-forms-expanded.html" %}
-         </div>
-      </div>
 
 
 
