save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -14,7 +14,7 @@
 
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>In addition to Usage and Association described above, six other <a href="#description-starting-point-terms">Starting point relations</a> can be qualified using the qualification properties, qualified influences, and influencer Properties shown in the following table.
+         <p>The seven <a href="#description-starting-point-terms">Starting point relations</a> that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
