--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,13 +8,13 @@
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
-      This new instance, in turn, can be described with arbitrary descriptions about the influence between the two resources cited. The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify.
+      This new instance, in turn, can be described with arbitrary descriptions about the influence between the two resources cited. The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them.
       </p>
 
 
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>The seven <a href="#description-starting-point-terms">Starting point relations</a> that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
+         <p>Seven <a href="#description-starting-point-terms">Starting point</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
@@ -22,7 +22,7 @@
       </div>
 
       <div id="qualified-forms-expanded" style="padding: 10px">
-         <p>Six <a href="#description-expanded-terms">Expanded relations</a> can also be qualified using the qualification properties, qualified influences, and influencer P0roperties shown in the following table.
+         <p>Six <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
