--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,13 +8,11 @@
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
-      This new instance, in turn, can be described with arbitrary descriptions about the influence between the two resources cited. The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them.
+      This new instance, in turn, can be described with arbitrary descriptions about the influence between the two resources cited. The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. For example, the first table's third row indicates that when we want to elaborate the association (<span class="repeated">prov:wasAssociatedWith</span>) that an Agent had upon an Activity, we add an addition description (<span class="repeated">prov:qualifiedAssociation</span>) to the Activity that references an instance of <span class="repeated">prov:Association</span> that, in turn, references the influencing Agent with the property <span class="repeated">prov:agent</span>.
       </p>
 
-
-
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>Seven <a href="#description-starting-point-terms">Starting point</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
+         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
