save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -31,7 +31,7 @@
       <p>
        The qualification classes and properties shown in the previous two tables can also be found in the <a href="#cross-reference">cross reference</a> 
         in the following section of this document. Each property that can be qualified provides a <strong>can be qualified with</strong> 
-         header that links to the qualifying property and influence class.
+         header that links to the qualifying property and influence class that should be used.
       The annotation property <span class="qname">prov:qualifiedForm</span> also references the qualification property and influence class within the OWL file itself.
 
          The involvement class is a subclass of <a class="qname" href="#Influence">prov:Influence</a> which
