save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -32,7 +32,7 @@
        The qualification classes and properties shown in the previous two tables can also be found in the <a href="#cross-reference">cross reference</a> 
         in the following section of this document. Each property that can be qualified provides a <strong>can be qualified with</strong> 
          header that links to the qualifying property and influence class that should be used. 
-         Conversely, each influence class indicates the unqualified property that it qualifies with the <strong>qualifies</strong> header in the cross reference below.
+         Conversely, <strong>qualifies</strong> header in the cross reference for the qualification terms indicates the unqualified property that it qualifies.
       The annotation property <span class="qname">prov:qualifiedForm</span> also references the qualification property and influence class within the OWL file itself.
 
          The influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
@@ -42,7 +42,7 @@
          <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property to use to cite the influencing resource (either
        <a class="qname" href="#entity">prov:entity</a>,
        <a class="qname" href="#activity">prov:activity</a>, or
-       <a class="qname" href="#agent">prov:agent</a>).
+       <a class="qname" href="#agent">prov:agent</a>, respectively).
          <p>
 So for instance, if we have the unqualified statement:
 <pre class="example">
