--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -32,7 +32,7 @@
        The qualification classes and properties shown in the previous two tables can also be found in the <a href="#cross-reference">cross reference</a> 
         in the next section of this document. If the property can be qualified, the <strong>can be qualified with</strong>
          header indicates the qualifying property and influence class that should be used.
-         Conversely, the <strong>qualifies</strong> header in the cross reference for the qualification terms indicates the unqualified property that it qualifies.
+         Conversely, the <strong>qualifies</strong> headers in the listings the qualification terms indicate the unqualified property that the terms qualify.
       The annotation property <span class="qname">prov:qualifiedForm</span> also references the qualification property and influence class within the OWL file itself.
 
          The influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
