save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -71,8 +71,8 @@ The asserter can thus attach additional properties to <code>:e1Gen</code> to
 describe the generation of <code>:e1</code>. To simplify client queries, any
 qualified relation SHOULD be accompanied by the equivalent unqualified
 statement. Unqualified properties SHOULD NOT have the equivalent qualified form
-asserted unless it adds additional information (for instance identifying the
-involvement).  </p>
+asserted unless it adds additional information.  
+   </p>
 
       <p>Figure 2 illustrates an example of the classes and properties needed to fulfill the qualification pattern for the <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
       </p>
