save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -62,7 +62,7 @@ the class <a class="qname" href='#Generation'>prov:Generation</a>, which is a su
 
 :e1Gen 
    a prov:Generation;
-   prov:entity :a1;
+   prov:activity :a1;
    :foo :bar;
 .
 </pre>
